# Foundry

./: .gitignore  ARCHITECTURE_DIAGRAM.md  EMBEDDINGS_REORGANIZATION.md  GLOSSARY.md  PLAN4SWEEP.md  POYO_EEG_TOKENIZATION_OPTIMIZATION_REPORT.md  README.md  main.py  profile_dataloader.py  profile_tokenizer_detail.py  profile_training.py  pyproject.toml  run_ajile_tokenizer_matrix.sh  runs  sweep_hyperqueue.sh  task_wandb_agent.sh  temporaldata_optimization_solutions_2_3_4.md  test.ipynb  testing.ipynb
.github/workflows/: linting.yml  testing.yml
analysis/: 001_overfit_single_batch.py  002_overfit_single_session.py  003_masking_difficulty_hierarchy.py  004_channel_identity_decoder.py  005_tokenizer_comparison.py  006_kemp_sleep_tokenizer_baseline.py  007_pretraining_loss_vs_downstream.py  008_embedding_analysis.py  009_finetuning_hp_search.py  010_discriminative_lr.py  011_session_emb_ablation.py  _wandb_utils.py
configs/: README.md  config.yaml
configs/cluster/: cscs.yaml  default.yaml
configs/data/: ajile.yaml  ajile_active_inactive_singlesess.yaml  ajile_allsess.yaml  ajile_multisess.yaml  ajile_singlesess.yaml  neurosoft_minipigs_multisess.yaml  neurosoft_minipigs_singlesess.yaml  neurosoft_singlesess.yaml  physionet.yaml  physionet_eegnet.yaml
configs/datasets/: physionet.yaml
configs/experiment/: baselines_ajile.yaml  default.yaml  eegnet_ajile.yaml  eegnet_ajile_active.yaml  eegnet_ajile_packed_sweep.yaml  eegnet_neurosoft.yaml  eegnet_neurosoft_sweep.yaml  poyo_ajile.yaml  poyo_ajile_active.yaml  poyo_ajile_behavior.yaml  poyo_ajile_behavior_sweep.yaml  poyo_ajile_pose.yaml  poyo_ajile_sweep.yaml  poyo_ajileall_behavior.yaml  poyo_neurosoft.yaml  poyo_per_session_ajilemultisess.yaml  pretrain_smoke.yaml  tokenizer_per_channel_per_timepoint_sweep.yaml
configs/logger/: csv.yaml  wandb.yaml
configs/model/: eeg.yaml  eeg_net_encoder.yaml  eegnet.yaml  gru.yaml  gru_baseline.yaml  linear.yaml  linear_baseline.yaml  linear_classifier.yaml  masked_poyo_eeg.yaml  mlp.yaml  mlp_baseline.yaml  poyo_eeg.yaml  poyo_eeg_cnn.yaml  shallow_conv_net.yaml  shallowcnn_baseline.yaml  temporal_conv_classifier.yaml  temporalcnn.yaml
configs/module/: classification.yaml  default.yaml  pretrain.yaml  regression.yaml  ssl_pretrain.yaml
configs/optuna/: bayes.yaml  default.yaml  grid.yaml  random.yaml
configs/profiling/: default.yaml
configs/sweep/: auditory_decoding_8band_hp.yaml  auditory_decoding_8band_hp_intrasession.yaml  auditory_decoding_8band_hp_singlesess.yaml  default.yaml  per_channel_cwt_behavior.yaml  per_channel_cwt_compressed_behavior.yaml  per_channel_cwt_compressor_sweep.yaml  per_channel_cwt_sweep.yaml  per_channel_resample_cnn_behavior.yaml  per_channel_resample_cnn_sweep.yaml  sleep_staging_hp.yaml  spatial_session_cwt_behavior.yaml  spatial_session_resample_cnn_behavior.yaml  tokenizer_explore_hp.yaml
configs/sweeps/: tokenizer_lr_wd_bayes.yaml
configs/tasks/: ajile_active_behavior.yaml  ajile_inactive_active.yaml  ajile_pose_estimation.yaml  masked_reconstruction.yaml  masked_reconstruction_patched.yaml  motor_imagery_5class.yaml  motor_imagery_left_right.yaml  motor_imagery_right_feet.yaml  neurosoft_acoustic_stim.yaml  neurosoft_acoustic_stim_2band.yaml  neurosoft_acoustic_stim_2band_rnd_a.yaml  neurosoft_acoustic_stim_2band_rnd_b.yaml  neurosoft_acoustic_stim_3band.yaml  neurosoft_acoustic_stim_6band.yaml  neurosoft_acoustic_stim_8band.yaml  neurosoft_on_vs_off.yaml  sleep_stage_5class.yaml  sleep_stage_6class.yaml
configs/trainer/: default.yaml  pretrain.yaml
data/: eegdash_data  processed
docs/: HYPERQUEUE_SWEEPS.md  README.md  SWEEPS.md  class_definition_comparison.md  kempsleep_wiring_critique.md  task_mapping_design_discussion.md
docs/design/: architectural-suggestions.md  task-refactor.md  technical-issues.md
docs/research/: tokenizer_followup_experiments.md
examples/: model_usage.py
experiments/: 001-overfit-single-batch.md  002-overfit-single-session.md  003-masking-difficulty-hierarchy.md  004-channel-identity-in-decoder.md  005-tokenizer-comparison.md  006-kemp-sleep-tokenizer-baseline.md  007-pretraining-loss-vs-downstream.md  008-embedding-analysis-linear-probing.md  009-finetuning-hyperparameter-search.md  010-discriminative-lr-finetuning.md  011-session-embedding-ablation.md
foundry/: __init__.py  config_resolvers.py  core.py  optuna_integration.py  optuna_launcher.py  seed.py  sweep.py  wandb_agent_worker.py  wandb_sweep_agent_worker.py
foundry/data/: __init__.py  fast_sampler.py  readout_specs.py  samplers.py  utils.py
foundry/datasets/: __init__.py  kemp_sleep_edf_2013.py  klinzing_sleep_ds005555_2024.py  korczowski_brain_invaders_2014a.py  mixins.py  schalk_wolpaw_physionet_2009.py  shirazi_hbnr1_ds005505_2024.py
foundry/models/: README.md  __init__.py  baselines.py  eeg_model.py  eegnet_model.py  embeddings.py  masked_poyo_eeg.py  masking.py  old_baselines.py  poyo_eeg.py  readout.py  reconstruction_head.py  signal_preparation.py  ssl_meta.py  tokenizer.py  utils.py
foundry/tasks/: __init__.py  (+10 more)
notebooks/: cwt_layer_walkthrough.ipynb  hparam_analyses.ipynb  tokenizer_comparison.ipynb
profiling/: profile_cpu_pipeline.py  profile_dataloader.py  profile_training.py
scripts/: extract_embeddings.py  job.sh  launch_per_channel_sweeps.sh  launch_tokenizer_wandb_sweep.sh  run_ajile_tokenizer_matrix.sh  run_optuna_search.py  safe_job.sh  wandb_sweep.py  wandb_sweep_train.py
src/: datamodule.py
tests/: conftest.py  test_ajile_task_refactor.py  test_cleanup_legacy.py  test_data_utils.py  test_datasets.py  test_kemp_sleep_dataset.py  test_kemp_sleep_transforms.py  test_masking.py  test_masking_validity_loss.py  test_neuroprobe_datamodule.py  test_neurosoft_task_refactor.py  test_openneuro_datamodule.py  test_openneuro_dataset.py  test_optuna_sweep.py  test_physionet_task_refactor.py  test_pretrained_loading.py  test_sampler.py  test_signal_preparation.py  test_ssl_module.py  test_task_modules.py  test_transforms.py  test_wandb_utils.py
wandb_exports/: EEGNET_NEUROSOFT_ALL_SESSIONS_session_summaries.json
(+336 files in other folders)
