[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.0",
    "hydra-submitit-launcher>=1.2.0",
    "lightning @ https://github.com/Lightning-AI/pytorch-lightning/releases/download/2.6.1/lightning-2.6.1-py3-none-any.whl",
    "torch>=2.9.1",
    "torch-brain",
    "matplotlib>=3.10.8",
    "torchmetrics>=1.8.2",
    "wandb>=0.24.0",
    "auditorydecoding",
    "optuna>=4.8.0",
    "cluster-uv[hydra]>=0.0.1.post1",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=8.0.0", "ruff>=0.14.14"]
notebook = ["ipykernel>=7.2.0", "seaborn>=0.13.2"]

[tool.uv.sources]
torch-brain = { git = "https://github.com/neuro-galaxy/torch_brain", branch = "main" }
auditorydecoding = { git = "https://github.com/Neurosoft-Bioelectronics/auditorydecoding", branch = "main" }
cluster-uv = { git = "https://github.com/mila-iqia/cluv", branch = "master" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
override-dependencies = [
    "torch-brain @ git+https://github.com/neuro-galaxy/torch_brain.git@main",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.cluv]
# All variables below can be overridden per cluster (except data_source).

# Job script to use by default when one isn't passed to the `submit` command, on all clusters.
# Can also be overridden per job submission.
job_script_path = "scripts/job.sh"

# Where to store job results by default.
results_path = "$SCRATCH/logs/cluv"

# On clusters, Cluv creates a symlink (a shortcut) in your project folder to the results_path dir.
# This makes it easier to keep your project in $HOME and to see the results which are on $SCRATCH.
results_symlink = "logs"

## The path where the project should be replicated on remote clusters.
# project_dir = "$HOME/<project_name>"

## Where to read the data from when synchronizing data to all clusters.
#data_source = "<cluster>:<dataset_path_on_the_cluster>"

## Where the dataset should be replicated on all clusters.
#datasets_path = "<path_to_copy_datasets_on_all_clusters>"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
# Assume that compute nodes don't have internet access by default. Override below when they do.
UV_OFFLINE = "1"
WANDB_MODE = "offline"

[tool.cluv.local]
## Settings (environment variables) applied when using cluv on a local machine (not on a Slurm cluster).
# Fake "$SCRATCH" directory to use when not on a Slurm cluster.
# (this makes the examples runnable either from a laptop or from a Slurm cluster.
env = { SCRATCH = "$HOME/scratch" }

[tool.cluv.sbatch_args]
# sbatch flags applied on all clusters. CLI-supplied flags take precedence.
time = "3:00:00"
requeue = true

###  --------------   Clusters Config   --------------  ###

[tool.cluv.clusters.mila]
# Overrides specific to the Mila cluster.
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }

[tool.cluv.clusters.tamia]

[tool.cluv.clusters.killarney]
# For example, you might not have a $SCRATCH on Killarney. This can be overwritten here.
results_path = "$HOME/logs/cluv"

[tool.cluv.clusters.vulcan]

[tool.cluv.clusters.rorqual]
sbatch_args = { account = "rrg-bengioy-ad" }

[tool.cluv.clusters.fir]
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }
sbatch_args = { account = "rrg-bengioy-ad" }

[tool.cluv.clusters.nibi]
env = { UV_OFFLINE = "0", WANDB_MODE = "online" }
sbatch_args = { account = "rrg-bengioy-ad" }

[tool.cluv.clusters.trillium]
sbatch_args = { account = "rrg-bengioy-ad" }

[tool.cluv.clusters.trillium-gpu]
sbatch_args = { account = "rrg-bengioy-ad" }

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
sbatch_args = { account = "def-bengioy" }
